--- a/env.yml
+++ b/env.yml
@@ -2,8 +2,9 @@ name: pytorch
 channels:
   - pytorch
   - defaults
+  - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=main
+  - _libgcc_mutex
   - backcall=0.1.0=py36_0
   - blas=1.0=mkl
   - ca-certificates=2019.11.27=0
@@ -21,9 +22,9 @@ dependencies:
   - jpeg=9b=h024ee3a_2
   - jupyter_client=5.3.4=py36_0
   - jupyter_core=4.6.1=py36_0
-  - libedit=3.1=heed3624_0
+  - libedit
   - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
+  - libgcc-ng
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.37=hbc83047_0
   - libsodium=1.0.16=h1bed415_0
@@ -32,7 +33,7 @@ dependencies:
   - mkl=2019.4=243
   - mkl_fft=1.0.12=py36ha843d7b_0
   - mkl_random=1.0.2=py36hd81dba3_0
-  - ncurses=6.0=h9df7e31_2
+  - ncurses
   - ninja=1.9.0=py36hfd86e86_0
   - numpy=1.16.4=py36h7e9f1db_0
   - numpy-base=1.16.4=py36hde5b4d6_0
@@ -47,7 +48,8 @@ dependencies:
   - ptyprocess=0.6.0=py36_0
   - pycparser=2.19=py36_0
   - pygments=2.4.2=py_0
-  - python=3.6.2=hca45abc_19
+  # bugfix: https://stackoverflow.com/a/58861719/10027894
+  - python=3.6.6
   - python-dateutil=2.8.0=py36_0
   - python-graphviz==0.13.2
   - pytorch=1.3.1=py3.6_cuda10.1.243_cudnn7.6.3_0
@@ -56,7 +58,7 @@ dependencies:
   - readline=7.0=ha6073c6_4
   - setuptools=41.0.1=py36_0
   - six=1.12.0=py36_0
-  - sqlite=3.23.1=he433501_0
+  - sqlite
   - tk=8.6.8=hbc83047_0
   - torchvision=0.4.2=py36_cu101
   - tornado=6.0.3=py36h7b6447c_0
