--- a/env.yml
+++ b/env.yml
@@ -1,9 +1,12 @@
-name: pytorch
+name: agd_code
 channels:
   - pytorch
   - defaults
   - conda-forge
 dependencies:
+  # Used to build maestro
+  - scons
+  - boost-cpp
   - _libgcc_mutex
   - backcall=0.1.0=py36_0
   - blas=1.0=mkl
@@ -121,5 +124,7 @@ dependencies:
     - websocket-client==0.57.0
     - werkzeug==0.16.0
     - yml==0.0.1
-prefix: /home/yf22/anaconda3/envs/pytorch
+    - httpimport
+    - gitpython
+    - addict
 
