--- a/env.yml
+++ b/env.yml
@@ -72,6 +72,8 @@ dependencies:
   - zeromq=4.3.1=he6710b0_3
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
+  - flake8
+  - black
   - pip:
     - absl-py==0.9.0
     - cachetools==4.0.0
@@ -127,4 +129,5 @@ dependencies:
     - httpimport
     - gitpython
     - addict
+    - wandb
 
