--- a/env.yml
+++ b/env.yml
@@ -74,6 +74,7 @@ dependencies:
   - zstd=1.3.7=h0b5b093_0
   - flake8
   - black
+  - torchinfo
   - pip:
     - absl-py==0.9.0
     - cachetools==4.0.0
