--- a/env.yml
+++ b/env.yml
@@ -74,9 +74,9 @@ dependencies:
   - zstd=1.3.7=h0b5b093_0
   - flake8
   - black
-  - torchinfo
   - pip:
     - absl-py==0.9.0
+    - torchinfo==1.5.2
     - cachetools==4.0.0
     - chardet==3.0.4
     - cycler==0.10.0
