--- a/env.yml
+++ b/env.yml
@@ -60,7 +60,6 @@ dependencies:
   - pyzmq=18.1.0=py36he6710b0_0
   - readline=7.0=ha6073c6_4
   - setuptools=41.0.1=py36_0
-  - six=1.12.0=py36_0
   - sqlite
   - tk=8.6.8=hbc83047_0
   - torchvision=0.4.2=py36_cu101
@@ -100,8 +99,8 @@ dependencies:
     - mpmath==1.1.0
     - oauthlib==3.1.0
     - opencv-python==4.1.2.30
-    - pillow==6.1.0
-    - protobuf==3.11.2
+    - pillow
+    - protobuf
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
     - pycocotools==2.0.0
@@ -114,6 +113,7 @@ dependencies:
     - scikit-learn==0.22.2.post1
     - scipy==1.1.0
     - sklearn==0.0
+    - six
     - sympy==1.5.1
     - tabulate==0.8.3
     - tensorboard==2.1.0
