--- a/env.yml
+++ b/env.yml
@@ -74,6 +74,8 @@ dependencies:
   - flake8
   - black
   - pip:
+    - basicsr
+    - torchsummary
     - absl-py==0.9.0
     - torchinfo==1.5.2
     - cachetools==4.0.0
